<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="slickdesigns.slickdesginsapp.Fragments.CreateOrderFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/create_order_title"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:background="@color/line_separator_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/enter_name_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/enter_email_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/enter_phone_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/type_of_order_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/type_color_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingTop="10dp"
                    android:text="@string/qty_title"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:paddingTop="50dp"
                    android:text="@string/insert_image_title"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/entered_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/entered_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="15dp"/>

                <EditText
                    android:id="@+id/entered_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="15dp"/>

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <Spinner
                    android:id="@+id/type_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <EditText
                    android:id="@+id/entered_qty"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="15dp"/>

                <ImageView
                    android:id="@+id/insert_picture_button"
                    android:layout_width="175dp"
                    android:layout_height="125dp"
                    android:src="@drawable/add_image"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_comments_title"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/entered_additional_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/submit_order_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/submit_order_button"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>